# OpenCV-Linux

./: CMakeLists.txt  README.md  main.cpp
